# PeCapul

./: .gitignore  README.md  pyproject.toml
src/pecapul/: app.py  database.py  editscreen.kv  editscreen.py  main.py  menuscreen.kv  menuscreen.py  trainer.py
