[project]
name = "pecapul"
version = "0.1.0"
description = ""
authors = [
    {name = "MikeHardIce",email = "mikehardice@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "kivy (>=2.3.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "pecapul", from = "src"}]

[tool.poetry.scripts]
main = "pecapul.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
